add: gunicorn signal service; refactor: otp services, logging service, project structure
